# shaa

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.alpine  Dockerfile.debian  LICENSE  README.md  build.sh  inputrc
ansible/: ansible.cfg  main.yml  (+1 more)
ui/: main.py  readme.md  requirements.txt  setup.cfg  todo.md
ui/command_sets/: __init__.py  cis.py  inventory.py  inventory_group.py  inventory_node.py  preset.py  profile.py
ui/data/custom/cis/: nice.yml
ui/data/custom/inventory/: test.yml
ui/data/custom/profile/: test.yml
ui/data/default/: cis.yml
ui/data/template/: cis.yml
ui/shaa_shell/: __main__.py  main.py  vault-password.py
ui/shaa_shell/command_sets/: cis.py  inventory.py  inventory_group.py  inventory_node.py  oscap.py  preset.py  profile.py  role_util.py  sec_tools.py
ui/shaa_shell/data/custom/cis/: example.yml  pog.yml
ui/shaa_shell/data/custom/cis/example/: part-1.yml  part-2.yml
ui/shaa_shell/data/custom/inventory/: example.yml
ui/shaa_shell/data/custom/inventory/example/: local.yml
ui/shaa_shell/data/custom/oscap/example/: after.yml  before.yml
ui/shaa_shell/data/custom/profile/: example.yml  pro.yml
ui/shaa_shell/data/custom/profile/example/: after.yml  before.yml  part-1.yml  part-2.yml
ui/shaa_shell/data/template/: cis.yml  oscap.yml  sec_tools.yml  util.yml
ui/shaa_shell/utils/: cis.py  exception.py  gen.py  inventory.py  parser.py  path.py  play.py  preset.py  profile.py  role.py  role_util.py  vault.py
ui/utils/: __init__.py  cis.py  gen.py  inventory.py  parser.py  preset.py  profile.py  utils.py  vault.py
(+464 files in other folders)
