[metadata]
name = shaa_shell
version = 0.6.1
description = an interactive shell for shaa
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/d0UBleW/shaa
author = William Wijaya
author_email = d0ublew@duck.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    ansible==6.5.0
    ansible-vault==2.1.0
    ruamel.yaml==0.17.26
    cmd2==2.4.3
    python-dotenv==1.0.0
    pexpect==4.8.0
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    shaa-shell = shaa_shell.main:main

[options.package_data]
shaa_shell =
    py.typed
    data/template/*.yml
    data/ansible/vault-password.py

[options.extras_require]
dev = mypy; ipython
